--- a/scss/_steps.scss
+++ b/scss/_steps.scss
@@ -7,6 +7,14 @@
         padding: 37px 21px 30px 30px;
         background-color: #B4CBD2;
         width: 25%;
+        a {
+            text-decoration: none;
+            font-family: Brusher;
+            font-size: 32px;
+            line-height: 98.2%;
+            color: #FFFFFF;
+            text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+        }
         .todo {
             font-family: Brusher;
             font-size: 36px;
