--- a/scss/_sale.scss
+++ b/scss/_sale.scss
@@ -246,6 +246,21 @@
     }
 }
 
+@media (max-width: 767px) {
+    .sale {
+        .wrapper {
+            .smallblock {
+                .image {
+                    .blockbrand {
+                        top: 55px;
+                        right: 55px;
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media (max-width: 736px) {
     .sale {
         .wrapper {
