--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -165,6 +165,7 @@ header {
         }
         .onleft {
             justify-content: flex-start;
+            padding-left: 0;
         }
         .onright {
             position: absolute;
