--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,8 @@ header .onright .singin {
   header .pos-rel {
     position: relative; }
   header .onleft {
-    justify-content: flex-start; }
+    justify-content: flex-start;
+    padding-left: 0; }
   header .onright {
     position: absolute;
     right: -22px;
